--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
         </select>
 
         <script src="./index.js"></script>
+        <input type="button" id="btnselect" value="Selected team"></input>
+        <div id="msgDiv"></div>
     </body>
 </html>
